# Schroedinger1D

./: README.md  TODO.md
DFT/: CMakeLists.txt  Data.h5  Main.cc  Parameters.hh  README.md  Wave_functions.cc
DFT/OLD/: Makefile
DFT/Utils/: Plot.py3
DFT/include/: Check_parameters.hh  Declare_functions.hh
Evolution/: CMakeLists.txt  Data.h5  Main.cc  Parameters.hh  Potentials.cc  README.md  Wave_functions.cc  build.sh
Evolution/Examples/Barrier/: Parameters.hh
Evolution/Examples/Free_propagation/: Parameters.hh
Evolution/Examples/Harmonic/: Parameters.hh
Evolution/Examples/Step_down/: Parameters.hh
Evolution/Examples/Step_up/: Parameters.hh
Evolution/Examples/Well/: Parameters.hh
Evolution/OLD/: Makefile
Evolution/OLD/OptionLists/: Ubuntu_GNU.cfg
Evolution/Utils/: Plot.py3  README.md  ffmpeg_list_generator.sh
Evolution/include/: Check_parameters.hh  Declare_functions.hh
